Bug 12477 - Added a place holder for Drag images here. The default cover image is behind the text so komi can update that as he sees fit. (r=nick)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10986 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/extensions/AlbumArt/chrome/skin/albumArt.css
+++ b/extensions/AlbumArt/chrome/skin/albumArt.css
@@ -84,3 +84,37 @@
   background-color:rgb(255,255,255);
   background-image: url('chrome://songbird/skin/base-elements/bg-empty.png');
 }
+
+/**
+ * Now Selected Drag here part of the stack
+ */
+.albumArtNowSelectedDragAndDrop {
+  -moz-box-flex: 1;
+  -moz-box-align: center;
+  -moz-box-pack: center;
+}
+
+.albumArtNotSelectedDragAndDropMessage {
+  -moz-border-radius:8px;
+  background-color:rgb(235,235,235);
+  padding:10px;
+  color:gray;
+  border:1px solid rgb(200,200,200);
+}
+
+/**
+ * Now Playing Drag here part of the stack
+ */
+.albumArtNowPlayingDragAndDrop {
+  -moz-box-flex: 1;
+  -moz-box-align: center;
+  -moz-box-pack: center;
+}
+
+.albumArtNotPlayingDragAndDropMessage {
+  -moz-border-radius:8px;
+  background-color:rgb(235,235,235);
+  padding:10px;
+  color:gray;
+  border:1px solid rgb(200,200,200);
+}
